# prism-rag

./: .dockerignore  .gitignore  RAG.md  README.md  pyproject.toml
backend/: main.py  pyproject.toml
configs/: local.yaml  openai.yaml
docker/: .env.example  Dockerfile  docker-compose.yml
scripts/: show_registry.sh
src/prism_rag/captioning/: __init__.py
src/prism_rag/chunking/: __init__.py  chunker.py
src/prism_rag/cli/: __init__.py  app.py  context.py  render.py
src/prism_rag/cli/commands/: __init__.py  collections.py  eval.py  ingest.py  query.py
src/prism_rag/config/: __init__.py  settings.py
src/prism_rag/embeddings/: __init__.py  base.py  factory.py  ollama.py  openai.py
src/prism_rag/eval/: __init__.py
src/prism_rag/generation/: __init__.py  base.py  factory.py  ollama.py  openai.py  prompt.py
src/prism_rag/loaders/: __init__.py  base.py  dispatcher.py  markdown.py  pdf.py
src/prism_rag/logging/: __init__.py  setup.py
src/prism_rag/pipeline/: __init__.py  factory.py  ingestion.py  query.py
src/prism_rag/registry/: __init__.py  sqlite.py
src/prism_rag/retrieval/: __init__.py  dense.py
src/prism_rag/vectorstore/: __init__.py  encoding.py  milvus.py  schema.py  store.py
