[project]
name = "prism-rag"
version = "0.1.0"
description = "A modular RAG pipeline with pluggable embeddings, generation, and vector storage."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "langchain-core>=0.3",
    "langchain-community>=0.3",
    "langchain-text-splitters>=0.3",
    "pymupdf>=1.24",
    "pymilvus>=2.4",
    "openai>=1.50",
    "tiktoken>=0.7",
    "ollama>=0.3",
]

[project.scripts]
prism = "prism_rag.cli.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prism_rag"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
